# windows-disk-exporter

./: .gitignore  README.md  main.rs
windows-disk-exporter/: .Cargo.toml.un~  Cargo.toml  Cargo.toml~
windows-disk-exporter/src/: cli.rs  collector.rs  main.rs
