[package]
name = "windows-disk-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = "0.13.2"
winapi = { version = "0.3.9", features = ["pdh"] }

[dependencies.windows]
version =  "0.42.0"
features = [
    "Win32_System_Performance",
]
