[package]
name = "windows-disk-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widestring = "1.0.2"
prometheus_exporter = "0.8.5"
clap = { version = "4.0.18", features = ["derive"] }
env_logger = "0.9.1"

[dependencies.windows]
version = "0.42.0"
features = ["Win32_System_Performance"]
